# doco

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PROMPT_STATUS.md  README.md  RELEASE_CHECKLIST.md  build.rs  doco.ini
.github/workflows/: release.yml
installer/inno/: doco.iss
installer/wix/: Product.wxs
resources/: app.manifest  app.rc
screenshots/: README.md
scripts/: build-release.ps1  fetch-pdfium.ps1  package-inno.ps1  package-wix.ps1  release.ps1
src/: app.rs  main.rs
src/document/: export.rs  mod.rs  model.rs
src/document/docx/: mod.rs  parser.rs  renderer.rs  writer.rs
src/document/markdown/: mod.rs  renderer.rs
src/document/pdf/: mod.rs  renderer.rs
src/document/txt/: mod.rs  renderer.rs
src/editor/: clipboard.rs  commands.rs  cursor.rs  image_ops.rs  mod.rs  search.rs  table.rs  undo.rs
src/render/: animation.rs  canvas.rs  d2d.rs  dwrite.rs  image_cache.rs  mod.rs  perf.rs
src/settings/: mod.rs  schema.rs
src/theme/: backgrounds.rs  colors.rs  mica.rs  mod.rs
src/ui/: command_palette.rs  context_menu.rs  dialog.rs  mod.rs  sidebar.rs  statusbar.rs  tabs.rs  toast.rs  toolbar.rs
src/window/: compositor.rs  input.rs  integration.rs  mod.rs
