[package]
name = "doco"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_DataExchange",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
quick-xml = "0.38"
zip = "6.0"
image = { version = "0.25", default-features = true }
pdfium-render = { version = "0.8", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
notify = "8.2"
parking_lot = "0.12"
widestring = "1.2"
windows-numerics = "0.3"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
ropey = "1.6"
pulldown-cmark = "0.13"
regex = "1.12"
pdf-writer = "0.12"

[features]
default = []
pdf = ["dep:pdfium-render"]
profiling = []

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

